<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camp_gear_manager"
            android:textColor="@color/cream"
            android:textSize="28sp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edtItemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="Items"
            android:hint="@string/item_name"
            android:inputType="text"
            android:gravity="center"
            android:background="@color/biege"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/txtTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edtCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/category"
            android:inputType="text"
            android:gravity="center"
            android:background="@color/biege"
            android:textColor="@color/black"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/edtItemName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edtQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:background="@color/biege"
            android:gravity="center"
            android:textColor="@color/black"
            android:inputType="number"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/edtCategory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edtComments"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:hint="@string/comments"
            android:background="@color/biege"
            android:textColor="@color/black"
            android:inputType="textMultiLine"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/edtQuantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnAddItem"
            android:layout_width="222dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/green"
            android:text="@string/add_item"
            android:textColor="@color/cream"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtComments" />

        <TextView
            android:id="@+id/txtTotalItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_items_packed_0"
            android:background="@color/biege"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/btnAddItem"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtItems"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/cream"
            android:text="@string/items_will_appear_here"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/txtTotalItems"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnViewDetails"
            android:layout_width="244dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/green"
            android:text="@string/view_details"
            android:textColor="@color/cream"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtItems" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>